--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  esc_pos_utils: ^1.0.0
+  esc_pos_utils:
+    git:
+      url: git://github.com/HaikelO/esc_pos_utils.git
   # esc_pos_utils:
   #   path: ../esc_pos_utils
   charset_converter: ^2.0.0
